chore: revamp model

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -11,6 +11,12 @@
  */
 
 @media (min-width: 768px) {
+  .sidebar {
+    position: fixed;
+    top: 48px;
+    bottom: 0;
+    overflow-y: auto;
+  }
   .sidebar .offcanvas-lg {
     position: -webkit-sticky;
     position: sticky;
@@ -51,4 +57,8 @@
 
 body {
   font-family: "Arimo", sans-serif;
+}
+
+.offcanvas-body {
+  height: 100%;
 }
